# dbaas

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: auth.py  connect.py  databases.py  scan.py
backend/app/auth/: local_provider.py  provider.py  tokens.py
backend/app/clients/: openshift_client.py
backend/app/collectors/: argocd_collector.py  base.py  gitlab_collector.py
backend/app/models/: api.py  database.py  user.py
backend/app/registry/: db_type_registry.py
backend/app/registry/types/: __init__.py  elasticsearch.py  mongodb.py  postgresql.py
backend/app/scanner/: scan_orchestrator.py
backend/app/storage/: base.py  json_storage.py  mongo_storage.py  user_storage.py
backend/data/: users.json
backend/tests/: conftest.py  test_argocd_collector.py  test_auth.py  test_gitlab_collector.py  test_registry.py  test_scan_orchestrator.py  test_storage.py
docs/: adding-a-new-db-type.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  databases.ts
frontend/src/auth/: AuthContext.tsx  authApi.ts
frontend/src/components/: ErrorBoundary.tsx  Pagination.tsx  TableSkeleton.tsx
frontend/src/config/: columns.ts
frontend/src/data/: example-data.ts
frontend/src/hooks/: useClusters.ts  useDatabases.ts  useDbTypes.ts  useGroups.ts  useScan.ts  useUrlFilters.ts
frontend/src/pages/: ExamplePage.tsx  LoginPage.tsx
(+18 files in other folders)
